# cats-api

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init-mongo.js  main.py  mongo-init.js  postman_collection.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
app/controllers/: cat_controller.py  user_controller.py
app/core/: config.py  database.py  security.py
app/models/: cat.py  user.py
app/repositories/: user_repository.py  user_repository_interface.py
app/schemas/: cat.py  user.py
app/services/: cat_service.py  user_service.py
cats_api/: scripts.py
tests/: conftest.py  database_cleanup.py  test_authentication.py  test_cat_controller.py  test_cat_controller_real.py  test_cat_service.py  test_comprehensive_coverage.py  test_integration.py  test_main.py  test_user_controller.py  test_user_controller_clean.py  test_user_service.py
